--- a/src/_playerboards.scss
+++ b/src/_playerboards.scss
@@ -71,12 +71,15 @@
 		align-items: center;
 		color: rgb(21, 104, 134);
 	}
-	
+
 	.xpd-help-icon {
 		cursor: pointer;
 		pointer-events: auto;
 
 		&.xpd-help-icon-mini {
+			position: relative;
+			top: 50%;
+			transform: translateY(-8%);
 			width: 15px;
 			height: 15px;
 			font-size: 10pt;
